- Fixed bug #43003 (Invalid timezone reported for DateTime objects constructed   using a timestamp).